#******************************************************************************
#  (c) 2020 Copyright, Real-Time Innovations, Inc. (RTI) All rights reserved.
#
#   Licensed according to the terms in the LICENSE.md file located at the root
#   of this software repository:
#
#                                LICENSE.md
#
#*****************************************************************************
# Call the CMakeLists.txt in each subdir (used to create XML equivalent to IDL files).

cmake_minimum_required(VERSION 3.14)

list(FIND TYPES_TO_BUILD "TYPES_RTI_AUTOMOTIVE" _idx)
if(${_idx} GREATER -1)
  add_subdirectory("rti/base")
  add_subdirectory("rti/actuation")
  add_subdirectory("rti/demo")
  add_subdirectory("rti/gateway")
  add_subdirectory("rti/perception")
  add_subdirectory("rti/physics")
  add_subdirectory("rti/planning")
  add_subdirectory("rti/sensing")
  add_subdirectory("rti/system")
  add_subdirectory("my_types/hello")
endif()
list(FIND TYPES_TO_BUILD "TYPES_COVESA_VSS" _idx)
if(${_idx} GREATER -1)
  add_subdirectory("covesa/base")
  add_subdirectory("covesa/ADAS")
  add_subdirectory("covesa/Body")
  add_subdirectory("covesa/Cabin")
  add_subdirectory("covesa/Chassis")
  add_subdirectory("covesa/Driver")
  add_subdirectory("covesa/OBD")
  add_subdirectory("covesa/Powertrain")
  add_subdirectory("covesa/Vehicle")
endif()
list(FIND TYPES_TO_BUILD "TYPES_ROS2_CORE" _idx)
if(${_idx} GREATER -1)
  add_subdirectory("ros/geometry_msgs/msg")
  add_subdirectory("ros/lifecycle_msgs/msg")
  add_subdirectory("ros/lifecycle_msgs/srv")
  add_subdirectory("ros/libstatistics_collector/msg")
  add_subdirectory("ros/std_msgs/msg")
  add_subdirectory("ros/diagnostic_msgs/msg")
  add_subdirectory("ros/diagnostic_msgs/srv")
  add_subdirectory("ros/test_rclcpp/msg")
  add_subdirectory("ros/test_rclcpp/srv")
  add_subdirectory("ros/turtlesim/msg")
  add_subdirectory("ros/turtlesim/action")
  add_subdirectory("ros/turtlesim/srv")
  add_subdirectory("ros/test_communication/msg")
  add_subdirectory("ros/logging_demo/srv")
  add_subdirectory("ros/rosgraph_msgs/msg")
  add_subdirectory("ros/nav_msgs/msg")
  add_subdirectory("ros/nav_msgs/srv")
  add_subdirectory("ros/rqt_py_common/msg")
  add_subdirectory("ros/rqt_py_common/srv")
  add_subdirectory("ros/sensor_msgs/msg")
  add_subdirectory("ros/sensor_msgs/srv")
  add_subdirectory("ros/std_srvs/srv")
  add_subdirectory("ros/pendulum_msgs/msg")
  add_subdirectory("ros/unique_identifier_msgs/msg")
  add_subdirectory("ros/builtin_interfaces/msg")
  add_subdirectory("ros/rcl_interfaces/msg")
  add_subdirectory("ros/rcl_interfaces/srv")
  add_subdirectory("ros/rosidl_generator_py/msg")
  add_subdirectory("ros/shape_msgs/msg")
  add_subdirectory("ros/map_msgs/msg")
  add_subdirectory("ros/map_msgs/srv")
  add_subdirectory("ros/statistics_msgs/msg")
  add_subdirectory("ros/stereo_msgs/msg")
  add_subdirectory("ros/composition_interfaces/srv")
  add_subdirectory("ros/example_interfaces/msg")
  add_subdirectory("ros/example_interfaces/action")
  add_subdirectory("ros/example_interfaces/srv")
  add_subdirectory("ros/move_base_msgs/action")
  add_subdirectory("ros/visualization_msgs/msg")
  add_subdirectory("ros/visualization_msgs/srv")
  add_subdirectory("ros/tf2_msgs/msg")
  add_subdirectory("ros/tf2_msgs/action")
  add_subdirectory("ros/tf2_msgs/srv")
  add_subdirectory("ros/rclcpp/msg")
  add_subdirectory("ros/action_tutorials_interfaces/action")
  add_subdirectory("ros/rmw_dds_common/msg")
  add_subdirectory("ros/trajectory_msgs/msg")
  add_subdirectory("ros/action_msgs/msg")
  add_subdirectory("ros/action_msgs/srv")
  add_subdirectory("ros/test_msgs/msg")
  add_subdirectory("ros/test_msgs/action")
  add_subdirectory("ros/test_msgs/srv")
endif()
list(FIND TYPES_TO_BUILD "TYPES_ROS2_CARLA" _idx)
if(${_idx} GREATER -1)
  add_subdirectory("ros/carla/carla_msgs/msg")
  add_subdirectory("ros/carla/carla_msgs/srv")
  add_subdirectory("ros/carla/carla_ros_scenario_runner_types/msg")
  add_subdirectory("ros/carla/carla_ros_scenario_runner_types/srv")
  add_subdirectory("ros/carla/carla_waypoint_types/msg")
  add_subdirectory("ros/carla/carla_waypoint_types/srv")
  add_subdirectory("ros/carla/carla_ackermann_msgs/msg")
endif()
list(FIND TYPES_TO_BUILD "TYPES_ROS2_GAZEBO" _idx)
if(${_idx} GREATER -1)
  add_subdirectory("ros/gazebo_msgs/msg")
  add_subdirectory("ros/gazebo_msgs/srv")
endif()
list(FIND TYPES_TO_BUILD "TYPES_ROS2_LGSVL" _idx)
if(${_idx} GREATER -1)
  add_subdirectory("ros/lgsvl_msgs/msg")
endif()
list(FIND TYPES_TO_BUILD "TYPES_ROS2_ASTUFF" _idx)
if(${_idx} GREATER -1)
  add_subdirectory("ros/astuff/astuff_sensor_msgs/kartech_linear_actuator_msgs/msg")
  add_subdirectory("ros/astuff/astuff_sensor_msgs/mobileye_560_660_msgs/msg")
  add_subdirectory("ros/astuff/astuff_sensor_msgs/derived_object_msgs/msg")
  add_subdirectory("ros/astuff/astuff_sensor_msgs/delphi_mrr_msgs/msg")
  add_subdirectory("ros/astuff/astuff_sensor_msgs/delphi_srr_msgs/msg")
  add_subdirectory("ros/astuff/astuff_sensor_msgs/ibeo_msgs/msg")
  add_subdirectory("ros/astuff/astuff_sensor_msgs/delphi_esr_msgs/msg")
  add_subdirectory("ros/astuff/astuff_sensor_msgs/neobotix_usboard_msgs/msg")
endif()
  